fix(css): fix the collapsed design

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,6 +41,10 @@ a {
   }
 }
 
+.logo-font {
+  font-size: 2rem;
+}
+
 .section-about {
   font-weight: bold;
 }
@@ -231,3 +235,11 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
